Fix background and foreground colors to improve WAVE contrast

--- a/styles/style.css
+++ b/styles/style.css
@@ -105,9 +105,9 @@ div {
 
 body, header a, main a, p, h3, nav button {
   line-height: normal;
-  background: #E5E2D3;
+  background: #F8F6F2;
   font-family: 'Josefin Slab', serif;
-  color: #FF4C00;
+  color: #C73C00;
 }
 
 ol,
@@ -144,17 +144,17 @@ a:hover {
 
 header {
     border-width: 15px 0 0 0;
-    border-color: #FF4C00;
+    border-color: #C73C00;
 }
 
 header a:hover {
-  color: #FF4C00;
+  color: #C73C00;
 }
 
 .dropdown-item {
   color: white;
-  background-color: #FF4C00;
-  border-bottom: 1px solid #E5E2D3; 
+  background-color: #C73C00;
+  border-bottom: 1px solid #F8F6F2; 
 }
 
 nav, section img, section h1 {
@@ -198,12 +198,12 @@ h2 {
   font-size: 1.5em;
   top: -10px;
   width: max-content;
-  background: #E5E2D3;
+  background: #F8F6F2;
   padding: 0 10px;
 }
 
 #About h2, #Portfolio h2 {
-  background: #E5E2D3;
+  background: #F8F6F2;
 }
 
 .b-separator {
@@ -212,13 +212,13 @@ h2 {
 
 nav button, #About a {
   background-color: transparent;
-  border: 1px solid #FF4C00;
+  border: 1px solid #C73C00;
   padding: 8px 45px;
 }
 
 #About a:hover {
   color: white;
-  background-color: #FF4C00
+  background-color: #C73C00
 }
 
 #photo, #Home p, #About a,  #Portfolio p, #Contact p {
@@ -235,7 +235,7 @@ h3, #About a, #Portfolio p {
 }
 
 .o-separator {
-  border-bottom: #FF4C00 3px solid;
+  border-bottom: #C73C00 3px solid;
   width: 45px;
   margin: 10px auto;
 }
@@ -323,7 +323,7 @@ h3, #About a, #Portfolio p {
 }
 
 footer {
-  background-color: #FF4C00;
+  background-color: #C73C00;
 }
 
 .w-separator {
@@ -332,7 +332,7 @@ footer {
 }
 
 #Contact h2, #Contact p, #Contact ul li {
-  background: #FF4C00;
+  background: #C73C00;
 }
 
 #Contact ul li:nth-of-type(1n) a {
